--- a/render.yaml
+++ b/render.yaml
@@ -19,4 +19,4 @@ services:
     staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE_URL
-        value: https://controle-financeiro-api.onrender.com
+        value: https://controle-financeiro-api-jckk.onrender.com/
