fix(api): harden auth and payload validation

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NEXTAUTH_SECRET="change-me-use-a-strong-random-secret"
+FINANCE_DB_PATH="data/finance.db"
 API_PROFILING="0"
 API_PROFILING_SLOW_QUERY_MS="80"
 OLLAMA_URL="http://127.0.0.1:11434/api/generate"
