test(integration): add API flow tests and fixtures

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev:webpack": "next dev",
     "seed": "tsx scripts/seed.ts",
     "validate": "tsx scripts/validate-backend-flow.ts",
+    "test": "npm run test:integration",
+    "test:integration": "node --test tests/integration/api-flow.test.mjs",
     "typecheck": "tsc --noEmit",
     "verify": "npm run typecheck && npm run lint",
     "build": "next build --no-lint",
