feat: conclude roadmap 1.1 with official metrics and transfer consistency

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:webpack": "next dev",
     "seed": "tsx scripts/seed.ts",
     "validate": "tsx scripts/validate-backend-flow.ts",
-    "test": "npm run test:integration",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "node --import tsx --test tests/unit/**/*.test.ts",
     "test:integration": "node --test tests/integration/api-flow.test.mjs",
     "typecheck": "tsc --noEmit",
     "verify": "npm run typecheck && npm run lint",
