--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NEXTAUTH_SECRET="change-me-use-a-strong-random-secret"
 NEXTAUTH_URL="http://localhost:3000"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/controle_financeiro"
+# Fallback opcional (usado apenas quando DATABASE_URL nao estiver definida).
 FINANCE_DB_PATH="data/finance.db"
 API_PROFILING="0"
 API_PROFILING_SLOW_QUERY_MS="80"
