--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
     "eslint-config-next": "^15.1.3",
+    "playwright": "^1.58.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "^5.9.3"
