--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "controle-financeiro-next",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "dev:turbo": "next dev --turbopack",
     "dev:webpack": "next dev",
+    "reset:data": "tsx scripts/reset-data.ts",
+    "reset:data:full": "tsx scripts/reset-data.ts --full",
     "seed": "tsx scripts/seed.ts",
     "db:migrate:sqlite-to-postgres": "tsx scripts/migrate-sqlite-to-postgres.ts",
     "validate": "tsx scripts/validate-backend-flow.ts",
+    "benchmark:import": "tsx scripts/benchmark-import.ts",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "node --import tsx --test tests/unit/**/*.test.ts",
     "test:integration": "node --test tests/integration/api-flow.test.mjs",
+    "test:e2e:import": "node tests/e2e/import-flow.e2e.mjs",
     "typecheck": "tsc --noEmit",
     "verify": "npm run typecheck && npm run lint",
     "build": "next build --no-lint",
