chore(vercel): harden postgres env and pool defaults

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,16 @@
 NEXTAUTH_SECRET="change-me-use-a-strong-random-secret"
 NEXTAUTH_URL="http://localhost:3000"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/controle_financeiro"
+# Opcional: aliases comuns no Vercel Postgres (o codigo aceita automaticamente).
+# POSTGRES_URL="postgresql://..."
+# POSTGRES_URL_NON_POOLING="postgresql://..."
 # Fallback opcional (usado apenas quando DATABASE_URL nao estiver definida).
 FINANCE_DB_PATH="data/finance.db"
 API_PROFILING="0"
 API_PROFILING_SLOW_QUERY_MS="80"
+PG_POOL_MAX="10"
+PG_IDLE_TIMEOUT_MS="30000"
+PG_CONNECTION_TIMEOUT_MS="10000"
 OLLAMA_URL="http://127.0.0.1:11434/api/generate"
 OLLAMA_MODEL="qwen2.5:3b"
 LOCAL_AI_TIMEOUT_MS="20000"
