fix(vercel): auth secret fallback and stricter postgres env detection

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NEXTAUTH_SECRET="change-me-use-a-strong-random-secret"
+# Alias aceito pelo Auth.js/NextAuth em alguns ambientes:
+# AUTH_SECRET="change-me-use-a-strong-random-secret"
 NEXTAUTH_URL="http://localhost:3000"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/controle_financeiro"
 # Opcional: aliases comuns no Vercel Postgres (o codigo aceita automaticamente).
