fix(db): enforce postgres runtime and remove build-time db init

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,9 @@ NEXTAUTH_SECRET="change-me-use-a-strong-random-secret"
 # AUTH_SECRET="change-me-use-a-strong-random-secret"
 NEXTAUTH_URL="http://localhost:3000"
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/controle_financeiro"
-# Opcional: aliases comuns no Vercel Postgres (o codigo aceita automaticamente).
+# Opcional: aliases comuns no Vercel Postgres (o codigo aceita automaticamente)
 # POSTGRES_URL="postgresql://..."
 # POSTGRES_URL_NON_POOLING="postgresql://..."
-# Fallback opcional (usado apenas quando DATABASE_URL nao estiver definida).
-FINANCE_DB_PATH="data/finance.db"
 API_PROFILING="0"
 API_PROFILING_SLOW_QUERY_MS="80"
 PG_POOL_MAX="10"
