--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.1.0",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
     "dev:webpack": "next dev",
     "reset:data": "tsx scripts/reset-data.ts",
